--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     <div class="myInfoText"><a href="index.html"><b>Minchu Kulkarni</b></a></div>
     <div class="myInfoText">Research Scientist, University of Washington</div>
+    <div class="myInfoText">Co-founder at <a href="fantail.pro">fantail.pro</a></div>
     <div class="myInfoText">minchu@uw.edu</div>
     
     <div class="sectionLinks"><a href="index.html" target="_self"><b>Projects</b></a></div>
@@ -25,6 +26,13 @@
   <div id="rightPanel">
   <div id="spacerTopRight"></div>
     <div id="detailTextWrap">
+
+      <div class="heading">Co-founder, fantail</div>
+      <div class="detailText">
+      AI powered brainstorming, writing, and visualization for films.
+	  <a href="https://youtu.be/IYn9biZVVqA">Watch the intro</a>
+      </div>
+
       <div class="heading">Research Scientist, University of Washington</div>
       <div class="detailText">
       Working at the intersection of HCI+AI.
