Apply minimal design and update content

--- a/interests.html
+++ b/interests.html
@@ -16,8 +16,9 @@
     <div id="myImage"><img src="myPic.jpg" width="160" height="160" alt=""/></div>
     
     <div class="myInfoText"><a href="index.html"><b>Minchu Kulkarni</b></a></div>
-    <div class="myInfoText">Undergraduate, Ashoka University</div>
-    <div class="myInfoText">chaitanyashareef.kulkarni@ashoka.edu.in</div>
+    <div class="myInfoText">Research Scientist, University of Washington</div>
+    <div class="myInfoText">Co-founder at <a href="https://fantail.pro">fantail.pro</a></div>
+    <div class="myInfoText">minchu@uw.edu</div>
 
     <div class="sectionLinks"><a href="index.html" target="_self">Projects</a></div>
     <div class="sectionLinks"><a href="interests.html" target="_self"><b>Interests</b></a></div>
