--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="aboutItem">
-          interested in AI, tech, films, hiking, and knowing myself
+          interested in AI, tech, films, hikes, and knowing myself
         </div>
       </div>
     </div>
